[gd_scene load_steps=6 format=3 uid="uid://rnk0j2d55el2"]

[ext_resource type="Script" path="res://src/screens/room_creation/room_creation.gd" id="1_7pkqi"]
[ext_resource type="PackedScene" uid="uid://dfmmc31q48csx" path="res://src/utils/buttons/ButtonUtils.tscn" id="2_wy8rq"]
[ext_resource type="PackedScene" uid="uid://dtpamqjs6bu2r" path="res://src/components/list/list.tscn" id="3_6ktbn"]
[ext_resource type="PackedScene" uid="uid://d4nve683ejjry" path="res://src/network/controllers/rooms_controller/rooms_controller.tscn" id="4_0dx4f"]
[ext_resource type="PackedScene" uid="uid://c3yt0tybymylk" path="res://src/network/network_client/network_client.tscn" id="5_1jm7f"]

[node name="RoomCreation" type="Node2D"]
script = ExtResource("1_7pkqi")

[node name="ButtonUtils" parent="." instance=ExtResource("2_wy8rq")]

[node name="List" parent="." instance=ExtResource("3_6ktbn")]

[node name="RoomsController" parent="." instance=ExtResource("4_0dx4f")]

[node name="NetworkClient" parent="." instance=ExtResource("5_1jm7f")]
